--- a/src/pages/signup_page.html
+++ b/src/pages/signup_page.html
@@ -9,16 +9,16 @@
 <body>
     <div class="flex flex-col items-center justify-center h-screen dark">
   <div class="w-full max-w-md bg-gray-800 rounded-lg shadow-md p-6">
-    <h2 class="text-2xl font-bold text-gray-200 mb-4">Sign Up</h2>
+    <h2 class="text-2xl font-bold text-gray-200 mb-4">Cadastre-se</h2>
     <form class="flex flex-col">
       <div class="flex space-x-4 mb-4">
         <input
-          placeholder="First Name"
+          placeholder="Primeiro Nome"
           class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 w-1/2 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
           type="text"
         />
         <input
-          placeholder="Last Name"
+          placeholder="Sobrenome"
           class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 w-1/2 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
           type="text"
         />
@@ -29,33 +29,33 @@
         type="email"
       />
       <input
-        placeholder="Confirm Email"
+        placeholder="Confirme seu email"
         class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 mb-4 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
         type="email"
       />
       <input
-        placeholder="Password"
+        placeholder="Senha"
         class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 mb-4 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
         type="password"
       />
       <input
-        placeholder="Confirm Password"
+        placeholder="Consfirme sua senha"
         class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 mb-4 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
         type="password"
       />
       <label class="text-sm mb-2 text-gray-200 cursor-pointer" for="gender">
-        Gender
+        Genero
       </label>
       <select
         class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 mb-4 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
         id="gender"
       >
-        <option value="male">Male</option>
-        <option value="female">Female</option>
-        <option value="other">Other</option>
+        <option value="male">Masculino</option>
+        <option value="female">Feminino</option>
+        <option value="other">Outro</option>
       </select>
       <label class="text-sm mb-2 text-gray-200 cursor-pointer" for="age">
-        Age
+        Data de Nascimento
       </label>
       <input
         class="bg-gray-700 text-gray-200 border-0 rounded-md p-2"
@@ -63,16 +63,16 @@
         type="date"
       />
       <p class="text-white mt-4">
-        Already have an account?
+        Já tem uma conta?
         <a class="text-sm text-blue-500 -200 hover:underline mt-4" href="/src/pages/login_page.html"
-          >Login</a
+          >Faça o Login</a
         >
       </p>
       <button
         class="bg-gradient-to-r from-indigo-500 to-blue-500 text-white font-bold py-2 px-4 rounded-md mt-4 hover:bg-indigo-600 hover:to-blue-600 transition ease-in-out duration-150"
         type="submit"
       >
-        Sign Up
+        Cadastrar
       </button>
     </form>
   </div>
