--- a/src/pages/login_page.html
+++ b/src/pages/login_page.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 </head>
 <body>
-    <div class="flex flex-col h-screen w-1/2 dark">
+    <div class="flex flex-col items-center justify-center h-screen dark">
   <div
     style="box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);"
     class="bg-gray-800 rounded-lg shadow-xl overflow-hidden"
@@ -54,7 +54,7 @@
               id="remember-me"
             />
             <label class="ml-2 block text-sm text-gray-400" for="remember-me"
-              >Permanecer Logado</label
+              >Manter-se Logado</label
             >
           </div>
 
@@ -63,7 +63,7 @@
               class="font-medium text-indigo-500 hover:text-indigo-400"
               href="#"
             >
-              Esqueceu sua senha?
+              Esqueceu a senha?
             </a>
           </div>
         </div>
