--- a/src/pages/signup_page.html
+++ b/src/pages/signup_page.html
@@ -13,32 +13,38 @@
     <form class="flex flex-col">
       <div class="flex space-x-4 mb-4">
         <input
+        id="firstName"
           placeholder="Primeiro Nome"
           class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 w-1/2 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
           type="text"
         />
         <input
+          id="lastName"
           placeholder="Sobrenome"
           class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 w-1/2 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
           type="text"
         />
       </div>
       <input
+        id="email"
         placeholder="Email"
         class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 mb-4 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
         type="email"
       />
       <input
+        id="confirmEmail"
         placeholder="Confirme seu email"
         class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 mb-4 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
         type="email"
       />
       <input
+        id="password"
         placeholder="Senha"
         class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 mb-4 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
         type="password"
       />
       <input
+        id="confirmPassword"
         placeholder="Consfirme sua senha"
         class="bg-gray-700 text-gray-200 border-0 rounded-md p-2 mb-4 focus:bg-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-500 transition ease-in-out duration-150"
         type="password"
@@ -59,7 +65,7 @@
       </label>
       <input
         class="bg-gray-700 text-gray-200 border-0 rounded-md p-2"
-        id="age"
+        id="birthDate"
         type="date"
       />
       <p class="text-white mt-4">
@@ -70,7 +76,8 @@
       </p>
       <button
         class="bg-gradient-to-r from-indigo-500 to-blue-500 text-white font-bold py-2 px-4 rounded-md mt-4 hover:bg-indigo-600 hover:to-blue-600 transition ease-in-out duration-150"
-        type="submit"
+        id="signupBtn"
+        type="button"
       >
         Cadastrar
       </button>
@@ -82,7 +89,6 @@
 
 
 
-
-    <script src="tailwind.config.js"></script>
+    <script src="/assets/js/user_object.js"></script>
 </body>
 </html>
