--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/home.css">
+    <link rel="stylesheet" href="./assets/css/home.css">
     <title>Home Page</title>
 </head>
 <body class="bg-gray-900">
     <header class="flex justify-between items-center fixed z-10 px-6 py-6 bg-gray-800 w-full">
         <nav class="flex justify-between items-center w-full">
-            <a class="flex items-center text-2xl text-white" href="#index">
+            <a class="flex items-center text-2xl text-white" href="./index.html">
                 <img src="/assets/svg/cybercore_logo.svg" alt="logo" class="w-[54px]">
             </a>
 
