--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="bg-gray-900">
     <header class="flex justify-between items-center fixed z-10 px-6 py-6 bg-gray-800 w-full">
         <nav class="flex justify-between items-center w-full">
-            <a class="flex items-center text-2xl text-white" href="./index.html">
+            <a class="flex items-center text-2xl text-white" href="index.html">
                 <img src="/assets/svg/cybercore_logo.svg" alt="logo" class="w-[54px]">
             </a>
 
