problemas de path das pastas resolvido

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/home.css">
+    <link rel="stylesheet" href="./assets/css/home.css">
     <title>Home Page</title>
 </head>
 <body class="bg-gray-900">
     <header class="flex justify-between items-center fixed z-10 px-6 py-6 bg-gray-800 w-full">
         <nav class="flex justify-between items-center w-full">
             <a class="flex items-center text-2xl text-white" href="index.html">
-                <img src="assets/svg/cybercore_logo.svg" alt="logo" class="w-[54px]">
+                <img src="./assets/svg/cybercore_logo.svg" alt="logo" class="w-[54px]">
             </a>
 
             <ul class="flex justify-center items-center text-white">
@@ -39,7 +39,7 @@
     </header>
 
     <section class="hero">
-        <img class="felx relative bg-cover w-full" src="assets/img/BG_CYBERCORE.png" alt="hero_section_background">
+        <img class="felx relative bg-cover w-full" src="./assets/img/BG_CYBERCORE.png" alt="hero_section_background">
 
         <h1 class="flex absolute top-56 left-8 text-8xl font-bold text-white drop-shadow-md w-[800px]">
             Tudo o que você precisa para o seu setup gamer
@@ -82,7 +82,7 @@
         </h2>
         <div class="grid grid-cols-6 gap-x-4 ml-32 mr-32">
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px]" src="assets/img/setup/01.jpeg" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px]" src="./assets/img/setup/01.jpeg" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Space Ship 01
                 </p>
@@ -95,7 +95,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] w-[134px]" src="assets/img/setup/02.jpeg" alt="workstation_02">
+                <img class="rounded-t-lg mb-[4px] w-[134px]" src="./assets/img/setup/02.jpeg" alt="workstation_02">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Space Ship 02
                 </p>
@@ -108,7 +108,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px]" src="assets/img/setup/03.jpg" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px]" src="./assets/img/setup/03.jpg" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Space Ship 03
                 </p>
@@ -121,7 +121,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] w-[134px]" src="assets/img/setup/04.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] w-[134px]" src="./assets/img/setup/04.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Space Ship 04
                 </p>
@@ -134,7 +134,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] w-[134px]" src="assets/img/setup/05.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] w-[134px]" src="./assets/img/setup/05.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Space Ship 05
                 </p>
@@ -147,7 +147,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] w-[134px]" src="assets/img/setup/06.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] w-[134px]" src="./assets/img/setup/06.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Space Ship 06
                 </p>
@@ -167,7 +167,7 @@
         </h2>
         <div class="grid grid-cols-6 gap-x-4 ml-32 mr-32">
             <div class="border rounded-lg">
-                <img class="rounded-t-lg w-[234px] h-[135px] mb-[4px]" src="assets/img/monitores/01.avif" alt="workstation_01">
+                <img class="rounded-t-lg w-[234px] h-[135px] mb-[4px]" src="./assets/img/monitores/01.avif" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Monitor 01
                 </p>
@@ -180,7 +180,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] w-[234px] h-[135px]" src="assets/img/monitores/02.jpeg" alt="workstation_02">
+                <img class="rounded-t-lg mb-[4px] w-[234px] h-[135px]" src="./assets/img/monitores/02.jpeg" alt="workstation_02">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Mnitor 02
                 </p>
@@ -193,7 +193,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[135px]" src="assets/img/monitores/03.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[135px]" src="./assets/img/monitores/03.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Monitor 03
                 </p>
@@ -206,7 +206,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] w-[134px] h-[135px]" src="assets/img/monitores/04.jpeg" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] w-[134px] h-[135px]" src="./assets/img/monitores/04.jpeg" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Mnitor 04
                 </p>
@@ -219,7 +219,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] w-[134px] h-[135px]" src="assets/img/monitores/05.jpeg" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] w-[134px] h-[135px]" src="./assets/img/monitores/05.jpeg" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Monitor 05
                 </p>
@@ -232,7 +232,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[135px]" src="assets/img/monitores/06.jpeg" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[135px]" src="./assets/img/monitores/06.jpeg" alt="workstation_01">
                 <p class="text-white text-lg mb-[4px] ml-[4px]">
                     Monitor 06
                 </p>
@@ -252,7 +252,7 @@
         </h2>
         <div class="grid grid-cols-6 gap-x-4 ml-32 mr-32">
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[135px]" src="assets/img/mouse/01.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[135px]" src="./assets/img/mouse/01.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Mouse 01
                 </p>
@@ -265,7 +265,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/mouse/02.jpg" alt="workstation_02">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/mouse/02.jpg" alt="workstation_02">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Mouse 02
                 </p>
@@ -278,7 +278,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[135px]" src="assets/img/mouse/03.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[135px]" src="./assets/img/mouse/03.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Mouse 03
                 </p>
@@ -291,7 +291,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/mouse/04.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/mouse/04.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Mouse 04
                 </p>
@@ -304,7 +304,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/mouse/05.png">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/mouse/05.png">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Mouse 05
                 </p>
@@ -317,7 +317,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/mouse/06.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/mouse/06.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Mouse 06
                 </p>
@@ -337,7 +337,7 @@
         </h2>
         <div class="grid grid-cols-6 gap-x-4 ml-32 mr-32">
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[135px]" src="assets/img/teclados/01.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[135px]" src="./assets/img/teclados/01.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Teclado 01
                 </p>
@@ -350,7 +350,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/teclados/02.jpeg" alt="workstation_02">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/teclados/02.jpeg" alt="workstation_02">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Teclado 02
                 </p>
@@ -363,7 +363,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[135px]" src="assets/img/teclados/03.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[135px]" src="./assets/img/teclados/03.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Teclado 03
                 </p>
@@ -376,7 +376,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/teclados/04.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/teclados/04.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Space Ship 04
                 </p>
@@ -389,7 +389,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/teclados/05.webp" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/teclados/05.webp" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Teclado 05
                 </p>
@@ -402,7 +402,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/teclados/06.jpeg" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/teclados/06.jpeg" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Teclado 06
                 </p>
@@ -422,7 +422,7 @@
         </h2>
         <div class="grid grid-cols-6 gap-x-4 ml-32 mr-32">
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[135px]" src="assets/img/celulares/01.jpg" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[135px]" src="./assets/img/celulares/01.jpg" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Celular 01
                 </p>
@@ -435,7 +435,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/celulares/02.webp" alt="workstation_02">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/celulares/02.webp" alt="workstation_02">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Celular 02
                 <p class="precoProduto text-2xl text-violet-600 ml-[4px]">
@@ -447,7 +447,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[135px]" src="assets/img/celulares/03.jpeg" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[135px]" src="./assets/img/celulares/03.jpeg" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Celular 03
                 </p>
@@ -460,7 +460,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/celulares/04.jpeg" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/celulares/04.jpeg" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Celular 04
                 </p>
@@ -473,7 +473,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/celulares/05.jpeg" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/celulares/05.jpeg" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Celular 05
                 </p>
@@ -486,7 +486,7 @@
             </div>
 
             <div class="border rounded-lg">
-                <img class="rounded-t-lg mb-[4px] h-[134px]" src="assets/img/celulares/06.jpeg" alt="workstation_01">
+                <img class="rounded-t-lg mb-[4px] h-[134px]" src="./assets/img/celulares/06.jpeg" alt="workstation_01">
                 <p class="nomeProduto text-white text-lg mb-[4px] ml-[4px]">
                     Celular 06
                 </p>
@@ -503,7 +503,7 @@
     
     <footer class="flex flex-col md:flex-row justify-between items-center w-full bg-[#1F2937] px-6 py-6">
         <div class="flex flex-col items-center mb-4 md:mb-0">
-            <img class="w-[150px]" src="assets/svg/cybercore_logo.svg" alt="logo">
+            <img class="w-[150px]" src="./assets/svg/cybercore_logo.svg" alt="logo">
             <h3 class="flex justify-center text-white text-2xl font-bold">
                 CYBERCORE
             </h3>
@@ -541,6 +541,6 @@
     </div>
     </footer>
 
-    <script src="assets/js/carrinho_sidebar.js"></script>
+    <script src="./assets/js/carrinho_sidebar.js"></script>
 </body>
 </html>
