--- a/src/pages/login_page.html
+++ b/src/pages/login_page.html
@@ -13,7 +13,7 @@
       <nav class="flex justify-between items-center w-full">
         <a
           class="flex items-center text-2xl text-white"
-          href="index.html"
+          href="/index.html"
         >
           <img
             src="/assets/svg/cybercore_logo.svg"
