problemas de Path resolvidos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </a>
 
             <ul class="flex justify-center items-center text-white">
-                <a href="/index.html"><li class="pr-6 text-lg">Home</li></a>
+                <a href="index.html"><li class="pr-6 text-lg">Home</li></a>
                 <a href="#produtos"><li class="pr-6 text-lg">Produtos</li></a>
                 <a href="#contato"><li class="pr-6 text-lg">Contato</li></a>
             </ul>
