--- a/src/pages/login_page.html
+++ b/src/pages/login_page.html
@@ -16,7 +16,7 @@
           href="/index.html"
         >
           <img
-            src="/assets/svg/cybercore_logo.svg"
+            src="assets/svg/cybercore_logo.svg"
             alt="logo"
             class="w-[54px]"
           />
@@ -29,7 +29,7 @@
         </ul>
 
         <div class="flex">
-          <a href="/src/pages/login_page.html">
+          <a href="src/pages/login_page.html">
             <button
               class="px-6 py-1 bg-[#7B68EE] text-white text-lg rounded-md mr-4"
             >
