Dependecias e consfigs de tailwind e gulp feitas

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/tailwind.config.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -548,6 +549,7 @@
         </iframe>
     </div>
     </footer>
+
 
     <script src="assets/js/carrinho_sidebar.js"></script>
 </body>
