Route Path corrigido

--- a/src/pages/login_page.html
+++ b/src/pages/login_page.html
@@ -129,7 +129,7 @@
           <span class="text-gray-400">Ainda não tem uma conta?</span>
           <a
             class="font-medium text-indigo-500 hover:text-indigo-400"
-            href="/src/pages/signup_page.html"
+            href="src/pages/signup_page.html"
             >Cadastre-se</a
           >
         </div>
