--- a/src/pages/signup_page.html
+++ b/src/pages/signup_page.html
@@ -110,7 +110,7 @@
       />
       <p class="text-white mt-4">
         Já tem uma conta?
-        <a class="text-sm text-blue-500 -200 hover:underline mt-4" href="/src/pages/login_page.html"
+        <a class="text-sm text-blue-500 -200 hover:underline mt-4" href="src/pages/login_page.html"
           >Faça o Login</a
         >
       </p>
@@ -129,6 +129,6 @@
 
 
 
-    <script src="/assets/js/user_object.js"></script>
+    <script src="assets/js/user_object.js"></script>
 </body>
 </html>
