Route Path corrigido, agora sim

--- a/pages/login_page.html
+++ b/pages/login_page.html
@@ -13,23 +13,23 @@
       <nav class="flex justify-between items-center w-full">
         <a
           class="flex items-center text-2xl text-white"
-          href="/index.html"
+          href="../index.html"
         >
           <img
-            src="assets/svg/cybercore_logo.svg"
+            src="../assets/svg/cybercore_logo.svg"
             alt="logo"
             class="w-[54px]"
           />
         </a>
 
         <ul class="flex justify-center items-center text-white">
-          <li class="pr-6 text-lg">Home</li>
-          <li class="pr-6 text-lg">Produtos</li>
-          <li class="pr-6 text-lg">Contato</li>
+          <a href="../index.html"><li class="pr-6 text-lg">Home</li></a>
+          <a href="#produtos"><li class="pr-6 text-lg">Produtos</li></a>
+          <a href="#contato"><li class="pr-6 text-lg">Contato</li></a>
         </ul>
 
         <div class="flex">
-          <a href="src/pages/login_page.html">
+          <a href="../pages/login_page.html">
             <button
               class="px-6 py-1 bg-[#7B68EE] text-white text-lg rounded-md mr-4"
             >
@@ -129,13 +129,12 @@
           <span class="text-gray-400">Ainda não tem uma conta?</span>
           <a
             class="font-medium text-indigo-500 hover:text-indigo-400"
-            href="src/pages/signup_page.html"
-            >Cadastre-se</a
-          >
+            href="../pages/signup_page.html"
+            >Cadastre-se</a>
         </div>
       </div>
     </div>
 
-    <script src="tailwind.config.js"></script>
+    <script src="../tailwind.config.js"></script>
   </body>
 </html>
