Path resolvido no GtiHub

--- a/pages/signup_page.html
+++ b/pages/signup_page.html
@@ -13,23 +13,23 @@
       <nav class="flex justify-between items-center w-full">
         <a
           class="flex items-center text-2xl text-white"
-          href="../index.html"
+          href="index.html"
         >
           <img
-            src="/assets/svg/cybercore_logo.svg"
+            src="assets/svg/cybercore_logo.svg"
             alt="logo"
             class="w-[54px]"
           />
         </a>
 
         <ul class="flex justify-center items-center text-white">
-          <a href="../index.html"><li class="pr-6 text-lg">Home</li></a>
+          <a href="index.html"><li class="pr-6 text-lg">Home</li></a>
           <a href="#produtos"><li class="pr-6 text-lg">Produtos</li></a>
           <a href="#contato"><li class="pr-6 text-lg">Contato</li></a>
         </ul>
 
         <div class="flex">
-          <a href="../pages/login_page.html">
+          <a href="pages/login_page.html">
             <button
               class="px-6 py-1 bg-[#7B68EE] text-white text-lg rounded-md mr-4"
             >
@@ -129,6 +129,6 @@
 
 
 
-    <script src="/assets/js/user_object.js"></script>
+    <script src="assets/js/user_object.js"></script>
 </body>
 </html>
