--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2>Seu Carrinho</h2>
         <div id="carrinho-itens"></div>
         <div id="carrinho-total"></div>
-        <a href="https://thenopholo.github.io/pages/cart_page.html" class="px-6 py-1 bg-[#7B68EE] text-white text-lg rounded-md">Ver Carrinho</a>
+        <a href="pages/cart_page.html" class="px-6 py-1 bg-[#7B68EE] text-white text-lg rounded-md">Ver Carrinho</a>
     </div>
 
     <header class="flex justify-between items-center fixed z-10 px-6 py-6 bg-gray-800 w-full">
