--- a/pages/login_page.html
+++ b/pages/login_page.html
@@ -13,17 +13,17 @@
       <nav class="flex justify-between items-center w-full">
         <a
           class="flex items-center text-2xl text-white"
-          href="index.html"
+          href="../index.html"
         >
           <img
-            src="assets/svg/cybercore_logo.svg"
+            src="../assets/svg/cybercore_logo.svg"
             alt="logo"
             class="w-[54px]"
           />
         </a>
 
         <ul class="flex justify-center items-center text-white">
-          <a href="index.html"><li class="pr-6 text-lg">Home</li></a>
+          <a href="../index.html"><li class="pr-6 text-lg">Home</li></a>
           <a href="#produtos"><li class="pr-6 text-lg">Produtos</li></a>
           <a href="#contato"><li class="pr-6 text-lg">Contato</li></a>
         </ul>
