--- a/pages/cart_page.html
+++ b/pages/cart_page.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="assets/css/cart_page.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="../assets/css/cart_page.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
     <title>Página de Carrinho</title>
 </head>
-<body class="bg-gray-900 pt-[72px] flex justify-center items-start min-h-screen p-4">
+<body class="bg-gray-900 pt-[72px] block justify-center items-start min-h-screen p-4">
     <header class="flex justify-between items-center fixed z-10 px-6 py-6 bg-gray-800 w-full top-0 left-0">
         <nav class="flex justify-between items-center w-full">
             <a class="flex items-center text-2xl text-white" href="../index.html">
@@ -37,25 +38,40 @@
     </header>
 
     <div
-    class="flex justify-center items-center drop-shadow-xl w-full max-w-md h-[350px] overflow-hidden rounded-xl bg-gray-800 m-auto"
+    id="containerProdutos"
+    class="flex justify-center items-start space-x-4 drop-shadow-xl w-full  h-[350px] overflow-hidden rounded-xl bg-gray-800 m-auto mt-14 mb-6"
     >
-    <div
-        id="cardCarrinho"
-        class="absolute inline-block text-white z-[1] opacity-90 rounded-xl inset-0.5 bg-gray-800 px-4 py-4 w-full overflow-y-auto"
-        style="max-height: calc(100vh - 72px - 1rem);"
-    >
-        <div class="flex justify-between mb-4">
-            <h1 class="text-white text-2xl">Seu carrinho</h1>
-            <a href="#" id="checkout" class="cursor-pointer bg-violet-600 px-3 py-2 rounded-md text-white tracking-wider shadow-xl animate-bounce hover:animate-none">Finalizar Compra</a>
-        </div>
+        <div
+            id="cardCarrinho"
+            class="card absolute inline-block text-white z-[2] opacity-90 rounded-xl inset-0.5 bg-gray-800 px-4 py-4 w-full overflow-y-auto"
+            style="max-height: calc(100vh - 72px - 1rem);"
+        >
+            <div class="flex justify-between mb-4">
+                <h1 class="text-white text-2xl">Seu carrinho</h1>
+                <button id="btnFinalizar" class="cursor-pointer bg-violet-600 px-3 py-2 rounded-md text-white tracking-wider shadow-xl animate-bounce hover:animate-none">Finalizar Compra</b>
+            </div>
 
-        <div id="listaDeProdutos" class="mb-4">
-            <!-- Produtos do carrinho serão exibidos aqui pelo JS -->
+            <div id="listaDeProdutos" class="mb-4">
+                <!-- Produtos do carrinho serão exibidos aqui pelo JS -->
+            </div>
+
         </div>
+        <div class="absolute w-56 h-48 bg-white blur-[50px] -left-1/2 -top-1/2"></div>
+
+        <!-- Novo card será inserido aqui pelo JavaScript -->
 
     </div>
-    <div class="absolute w-56 h-48 bg-white blur-[50px] -left-1/2 -top-1/2"></div>
+
+    <div
+    id="containerForm"
+    >
+        
+        <div class="absolute w-56 h-48 bg-white blur-[50px] -left-1/2 -top-1/2"></div>
+
+        <!-- Novo card será inserido aqui pelo JavaScript -->
+
     </div>
     <script src="../assets/js/cart_page.js"></script>
+    <script type="module" src="../assets/js/cart_page_form.js"></script>
 </body>
 </html>
