Formulario de entrega e cartao adicionados na pagina de carrino

--- a/pages/cart_page.html
+++ b/pages/cart_page.html
@@ -56,22 +56,20 @@
             </div>
 
         </div>
-        <div class="absolute w-56 h-48 bg-white blur-[50px] -left-1/2 -top-1/2"></div>
-
-        <!-- Novo card será inserido aqui pelo JavaScript -->
 
     </div>
 
-    <div
-    id="containerForm"
-    >
-        
-        <div class="absolute w-56 h-48 bg-white blur-[50px] -left-1/2 -top-1/2"></div>
-
+    <div id="containerForm">
         <!-- Novo card será inserido aqui pelo JavaScript -->
-
     </div>
+
+    <div id="containerCartao">
+        <!-- Novo card será inserido aqui pelo JavaScript -->
+    </div>
+
+
     <script src="../assets/js/cart_page.js"></script>
-    <script type="module" src="../assets/js/cart_page_form.js"></script>
+    <script src="../assets/js/cart_page_form.js"></script>
+    <script src="../assets/js/cart_page_cartao.js"></script>
 </body>
 </html>
